tests/NormalTests/paczka1/fuzzy1/45915068.err
Error in line 3: X29N3IvgM0P S680 4,9
Error in line 7: fvfr S742 48,1
Error in line 16: WpRqDHJL S742 73,8
Error in line 34: WpRqDHJL S680 1,8
